kyverno-policies/prevent-deletion-in-protected-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-deletion-in-protected-namespaces
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: block-resource-deletion
      match:
        any:
          - resources:
              kinds:
                - "*"
              namespaces:
                - ingress-nginx
                - cert-manager
                - external-dns
                - argocd
              operations:
                - DELETE
      validate:
        message: "Deleting resources in protected namespaces is not allowed."
        deny: {}
